--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <title>Jack - personal portfolio</title>
 
   <!-- 
-    - favicon
+    - MyLogo
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="./MyLogo.svg" type="image/svg+xml">
 
   <!-- 
     - custom css link
