--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jack - personal portfolio</title>
+  <title>Dan Davis - My Data Portfolio</title>
 
   <!-- 
     - MyLogo
@@ -37,7 +37,7 @@
     <div class="container">
 
       <h1 class="h1 logo">
-        <a href="#">Jack<span>.</span></a>
+        <a href="#">Dan<span>.</span></a>
       </h1>
 
       <div class="navbar-actions">
@@ -114,7 +114,7 @@
 
         <div class="hero-content">
 
-          <h2 class="h2 hero-title">We Design & Build Creative Products</h2>
+          <h2 class="h2 hero-title">I want to help you perform at the highest level. Let's work together.</h2>
 
           <a href="#contact" class="btn btn-primary">Get in touch</a>
 
@@ -233,15 +233,22 @@
 
           <p class="section-subtitle">About me</p>
 
-          <h2 class="h3 section-title">Need a Creative Product? I can Help You!</h2>
+          <h2 class="h3 section-title">I want to help you perform at the highest level. Let's work together.</h2>
 
           <p class="section-text">
-            Hi! I’m Jack Reacher, and I’m a developer who has passion for building clean web applications with intuitive
-            functionalities. I enjoy the process of turning ideas into reality using creative solutions. I’m always
-            curious about
-            learning new skills, tools, and concepts. In addition to working on various solo full stack projects, I have
-            worked with
-            creative teams, which involves daily stand-ups and communications, source control, and project management.
+            Greetings. I'm Dan. I left a job in November where I was working in the movie industry as a systems 
+            engineer in the post-production mastering space. I was unhappy for a while, and really felt bad about it -
+            Great job, great company, "Just suck it up and be happy, what's wrong with you?" is what I'd tell myself.
+            
+            Leading up to my departure, through reflection and working with a career counseler, I found that I was at my ceiling
+            as an enginner in terms of my abilities and my interest. I found I like people more than I thought from doing work
+            in personal coaching and leadership training. I needed a change into something that was more communication and team
+            based. I'd always been a kid who tried to find what the strongest or "best" thing in a video game was. I'd never realized
+            this was being an analyst, goingon the hunt to find what's effective or valuable in any organization, workplace, or "game"
+            of any kind.
+            
+            So, with some online resources, I've taught myself how to work with data using Python, SQL, and R. I'd love to use
+            what I've learned to benefit you or your organization, and take your game to the next level.
           </p>
 
           <div class="btn-group">
@@ -271,9 +278,8 @@
           <h2 class="h3 section-title">What My Programming Skills Included?</h2>
 
           <p class="section-text">
-            I develop simple, intuitive and responsive user interface that helps users get things done with less effort
-            and time
-            with those technologies.
+            I can clean, analyze, and present findings from any data you have to get the numbers to back
+            the changes you want to make.
           </p>
 
           <div class="skills-toggle" data-toggle-box>
@@ -885,7 +891,7 @@
 
       <p class="h1 logo">
         <a href="#">
-          Jack<span>.</span>
+          Dan<span>.</span>
         </a>
       </p>
 
