--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
 
               <p class="section-subtitle">My Works</p>
 
-              <h2 class="h3 section-title">See My Works Which Will Amaze You!</h2>
+              <h2 class="h3 section-title">Here's some of my stuff. Check it out.</h2>
 
               <p class="section-text">
                 We develop the best quality website that serves for the long-term. Well-documented, clean, easy and
