--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
 
       <h1 class="h1 logo">
-        <a href="#">Dan<span>.</span></a>
+        <a href="#">Dan Davis<span>.</span></a>
       </h1>
 
       <div class="navbar-actions">
@@ -225,7 +225,7 @@
       <section class="about" id="about">
 
         <figure class="about-banner">
-          <img src="./assets/images/about-banner.png" alt="A man in a alice blue shirt with a thinking expression"
+          <img src="./assets/images/MeJoshuaTree.png" alt="A guy standing in between two rocks"
             class="w-100">
         </figure>
 
