provide you > do for you

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
           <p class="section-subtitle">My skills</p>
 
-          <h2 class="h3 section-title">What can I provide you?</h2>
+          <h2 class="h3 section-title">What can I do for you?</h2>
 
           <p class="section-text">
             I can gather, clean, analyze, and present findings from any data you have to get the numbers 
