--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <div class="hero-content">
 
-          <h2 class="h2 hero-title">Hi! I'm Dan. Let's work together.</h2>
+          <h2 class="h2 hero-title">I'm Dan.</h2>
 
           <a href="#contact" class="btn btn-primary">Reach out to me.</a>
 
