--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
           <h2 class="h2 hero-title">I'm Dan.</h2>
 
-          <a href="#contact" class="btn btn-primary">Let's work together.</a>
+          <a href="#contact" class="btn btn-primary">Let's connect.</a>
 
         </div>
 
