added style positioning line to I'm Dan

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         </figure>
 
-        <div class="hero-content">
+        <div class="hero-content" style="position:absolute; left:0%; top:80%;>
 
           <h2 class="h2 hero-title">I'm Dan.</h2>
 
