--- a/index.html
+++ b/index.html
@@ -746,14 +746,8 @@
   <footer class="footer">
     <div class="container">
 
-      <p class="h1 logo">
-        <a href="#">
-          Dan Davis<span>.</span>
-        </a>
-      </p>
-
       <p class="copyright">
-        &copy; 2022 <a href="#">codewithsadee</a>. All rights reserved
+        &copy; 2022 <a href="#">codewithsadee</a>. All rights reserved.
       </p>
 
     </div>
