--- a/index.html
+++ b/index.html
@@ -42,11 +42,6 @@
 
       <div class="navbar-actions">
 
-        <select name="language" id="lang">
-          <option value="en">En</option>
-          <option value="ar">Ar</option>
-        </select>
-
         <button class="theme-btn" aria-label="Change Theme" title="Change Theme" data-theme-btn>
           <span class="icon"></span>
         </button>
@@ -116,7 +111,7 @@
 
           <h2 class="h2 hero-title">I'm Dan.</h2>
 
-          <a href="#contact" class="btn btn-primary">Let's connect.</a>
+          <a href="#contact" class="btn btn-primary">Contact me.</a>
 
         </div>
 
