removed Contact me. button repos'd text

--- a/index.html
+++ b/index.html
@@ -107,11 +107,9 @@
 
         </figure>
 
-        <div class="hero-content" style="position:absolute; top:80%; right:35%>
+        <div class="hero-content" style="top:80%">
 
           <h2 class="h2 hero-title">I'm Dan.</h2>
-
-          <a href="#contact" class="btn btn-primary">Contact me.</a>
 
         </div>
 
