added 100px left to text

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
         </figure>
 
-        <div class="hero-content" style="top:80%">
+        <div class="hero-content" style="top:80%; left:100px">
 
           <h2 class="h2 hero-title">I'm Dan.</h2>
 
