moved linkedin logo 150px

--- a/index.html
+++ b/index.html
@@ -115,9 +115,8 @@
 
         <ul class="hero-social-list">
 
-          
           <li>
-            <a href="#" class="hero-social-link">
+            <a href="#" class="hero-social-link" style="left:150px">
               <ion-icon name="logo-linkedin"></ion-icon>
 
               <div class="tooltip">Linkedin</div>
