swapped Python in for HTML5

--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">HTML5</div>
+                <div class="tooltip">Python</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/html5.png" alt="HTML5 logo">
+                  <img src="./assets/images/Python48.png" alt="Python logo">
                 </div>
               </div>
             </li>
