--- a/index.html
+++ b/index.html
@@ -231,110 +231,70 @@
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">CSS3</div>
+                <div class="tooltip">SQL</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/css3.png" alt="CSS3 logo">
+                  <img src="./assets/images/SQL48.png" alt="SQL logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">JavaScript</div>
+                <div class="tooltip">R</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/javascript.png" alt="JavaScript logo">
+                  <img src="./assets/images/R48.png" alt="R logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">TypeScript</div>
+                <div class="tooltip">RedHat</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/typescript.png" alt="TypeScript logo">
+                  <img src="./assets/images/Redhat48.png" alt="RedHat logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">jQuery</div>
+                <div class="tooltip">CentOS</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/jquery.png" alt="jQuery logo">
+                  <img src="./assets/images/CentOS48.png" alt="CentOS logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Bootstrap</div>
+                <div class="tooltip">Command Line</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/bootstrap.png" alt="Bootstrap logo">
+                  <img src="./assets/images/command.png" alt="Command Line logo logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Angular</div>
+                <div class="tooltip">XML</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/angular.png" alt="Angular logo">
+                  <img src="./assets/images/XML48.png" alt="XML logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">React</div>
+                <div class="tooltip">SMPTE</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/react.png" alt="React logo">
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">Vue</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/vue.png" alt="Vue logo">
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">Firebase</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/firebase.png" alt="Firebase logo">
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">PugJs</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/pugjs.png" alt="PugJs logo">
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">SASS</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/sass.png" alt="SASS logo">
+                  <img src="./assets/images/SMPTE48.png" alt="SMPTE logo">
                 </div>
               </div>
             </li>
