swapped out tools icons

--- a/index.html
+++ b/index.html
@@ -305,30 +305,20 @@
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Ajax</div>
+                <div class="tooltip">Tableau</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/ajax.png" alt="Ajax logo">
+                  <img src="./assets/images/Tableau48.png" alt="Tableau logo">
                 </div>
               </div>
             </li>
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Gulp</div>
+                <div class="tooltip">BigQuery</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/gulp.png" alt="Gulp logo">
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">Webpack</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/webpack.png" alt="Webpack logo">
+                  <img src="./assets/images/Bigquery48.png" alt="BigQuery logo">
                 </div>
               </div>
             </li>
@@ -345,50 +335,10 @@
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Npm</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/npm.png" alt="Npm logo">
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">Command Line</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/command.png" alt="Command Line logo">
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">VS Code</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/vs-code.png" alt="VS Code logo">
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="skill-card">
                 <div class="tooltip">Trello</div>
 
                 <div class="card-icon">
                   <img src="./assets/images/trello.png" alt="Trello logo">
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="skill-card">
-                <div class="tooltip">ClickUp</div>
-
-                <div class="card-icon">
-                  <img src="./assets/images/clickup.png" alt="ClickUp logo">
                 </div>
               </div>
             </li>
@@ -415,14 +365,25 @@
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Adobe XD</div>
+                <div class="tooltip">GSuite</div>
 
                 <div class="card-icon">
-                  <img src="./assets/images/adobe-xd.png" alt="Adobe XD logo">
+                  <img src="./assets/images/GSuite48.png" alt="GSuite logo">
                 </div>
               </div>
             </li>
 
+            <li>
+              <div class="skill-card">
+                <div class="tooltip">Office Suite</div>
+
+                <div class="card-icon">
+                  <img src="./assets/images/Office48.png" alt="Office Suite logo">
+                </div>
+              </div>
+            </li>
+
+            
           </ul>
 
         </div>
