--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
               <p class="section-text">
                 I take each project as an opportunity to grow my knowledge and skills. If
-                you have any questions, feel free to let me know.
+                you have any questions, feel free to get in touch with me!
               </p>
 
             </div>
