change of Thumbs copy

--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
           </p>
           
           <p class="section-text">
-            I'm proud of this photo I took of my cat, so I'm putting it here.
+            I am very proud of this photo of my cat.
           </p>
 
           <img src="./assets/images/ThumbsHalo.png" alt="Here's Thumbs."
