--- a/index.html
+++ b/index.html
@@ -416,6 +416,8 @@
               <p class="section-text">
                 I take each project as an opportunity to grow my knowledge and skills. If
                 you have any questions, feel free to get in touch with me!
+                
+                <a href="https://github.com/danieljamesdavis/Portfolio/wiki">Direct link to my Portfolio Main Page.</a>
               </p>
 
             </div>
