--- a/index.html
+++ b/index.html
@@ -528,7 +528,8 @@
 
           <p class="section-text">
             Want to work together? Consultation is completely free - I intend you leave the conversation with
-            value regardless of the outcome. You can expect a response within 3 business days.
+            value regardless of the outcome. You can expect a response within 3 business days. You can find my
+            LinkedIn inside my resume.
           </p>
           
           <p class="section-text">
