--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
               <p class="section-subtitle">My Works</p>
 
-              <h2 class="h3 section-title">Here's some of my stuff. Check it out.</h2>
+              <h2 class="h3 section-title">Here's some of my stuff.</h2>
 
               <p class="section-text">
                 I take each project as an opportunity to grow my knowledge and skills. If
