--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <div class="btn-group">
             <button class="btn btn-secondary">Work with me.</button>
 
-            <button class="btn btn-primary">Resume</button>
+            <a href=https://raw.githubusercontent.com/danieljamesdavis/danieljamesdavis.github.io/master/Daniel_Davis_Resume.pdf><button class="btn btn-primary">Resume</button>
           </div>
 
         </div>
