Added sizing and open in new page to resume button

--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 
     
 
-            <form action="https://raw.githubusercontent.com/danieljamesdavis/danieljamesdavis.github.io/master/Daniel_Davis_Resume.pdf">
-              <button class="btn btn-primary" type="submit">Resume</button>
+            <form action="https://raw.githubusercontent.com/danieljamesdavis/danieljamesdavis.github.io/master/Daniel_Davis_Resume.pdf" target="_blank">
+              <button class="btn btn-primary" type="submit" style="height:200px;width:200px">Resume</button>
             </form>
             
           </div>
