Added contact redirect and sizing to "workwithme"

--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
 
           <div class="btn-group">
             
-              <button class="btn btn-secondary">Work with me.</button>
-
-    
+            <form action="https://danieljamesdavis.github.io/#contact">
+              <button class="btn btn-secondary" type="submit" style="height:40px;width:360px">>Work with me.</button>
+            </form>
 
             <form action="https://raw.githubusercontent.com/danieljamesdavis/danieljamesdavis.github.io/master/Daniel_Davis_Resume.pdf" target="_blank">
               <button class="btn btn-primary" type="submit" style="height:40px;width:200px">Resume</button>
