--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <div class="btn-group">
             
             <form action="#contact">
-              <button class="btn btn-secondary" type="submit">Work with me.</button>
+              <button class="btn btn-secondary" type="submit" style="height:40px">Work with me.</button>
             </form>
 
             <form action="https://raw.githubusercontent.com/danieljamesdavis/danieljamesdavis.github.io/master/Daniel_Davis_Resume.pdf" 
