--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
           <div class="btn-group">
             
             <form action="#contact">
-              <button class="btn btn-secondary" type="submit" style="height:80px">Work with me.</button>
+              <button class="btn btn-secondary" type="submit">Work with me.</button>
             </form>
 
             <form action="https://raw.githubusercontent.com/danieljamesdavis/danieljamesdavis.github.io/master/Daniel_Davis_Resume.pdf" 
                   target="_blank">
-              <button class="btn btn-primary" type="submit" style="height:80px;width:200px">Resume</button>
+              <button class="btn btn-primary" type="submit">Resume</button>
             </form>
             
           </div>
