--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
             <form action="https://raw.githubusercontent.com/danieljamesdavis/danieljamesdavis.github.io/master/Daniel_Davis_Resume.pdf" 
                   target="_blank">
-              <button class="btn btn-primary" type="submit">Resume</button>
+              <button class="btn btn-primary" type="submit">Here's my resume.</button>
             </form>
             
           </div>
