Added my email as mailto

--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
           
         </div>
 
-        <form action="" class="contact-form">
+        <form action="mailto:djd7930@gmail.com" class="contact-form">
 
           <div class="form-wrapper">
 
