--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
           
         </div>
 
-        <form action="mailto:djd7930@gmail.com" class="contact-form">
+        <form action="mailto:djd7930@gmail.com" method=”POST” enctype=”text/plain” name=”EmailForm” class="contact-form">
 
           <div class="form-wrapper">
 
@@ -603,7 +603,7 @@
 
             <div class="input-wrapper">
 
-              <textarea name="message" id="message" required placeholder="Write here."
+              <textarea name="message" id="message" required placeholder="Your message here."
                 class="input-field"></textarea>
 
               <ion-icon name="chatbubbles"></ion-icon>
