--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
           
         </div>
 
-        <form action="https://formsubmit.co/el/zayavi" method="POST" name=”email” class="contact-form">
+        <form action="https://formsubmit.co/djd7930@gmail.com" method="POST" name=”email” class="contact-form">
 
           <div class="form-wrapper">
 
