changed to formspree

--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
           
         </div>
 
-        <form action="https://formsubmit.co/djd7930@gmail.com" method="POST" name=”email” class="contact-form">
+        <form action="https://formspree.io/f/meqdrpgz" method="POST" class="contact-form">
 
           <div class="form-wrapper">
 
