Changed Portfolio main link to a button

--- a/index.html
+++ b/index.html
@@ -426,7 +426,11 @@
               </p>
               
               <p class="section-text">
-                <a href="https://github.com/danieljamesdavis/Portfolio/wiki">Direct link to my Portfolio Main Page.</a>
+                
+                <form action="https://github.com/danieljamesdavis/Portfolio/wiki" target="_blank">
+                  <button class="btn btn-primary" type="submit">My Portfolio Main Page.</button>
+                </form>
+
               </p>
 
             </div>
