Changed portfolio copy

--- a/index.html
+++ b/index.html
@@ -421,8 +421,8 @@
               <h2 class="h3 section-title">Here's some of my stuff.</h2>
 
               <p class="section-text">
-                I take each project as an opportunity to grow my knowledge and skills. If
-                you have any questions, feel free to get in touch with me!
+                I take each project as an opportunity to grow my knowledge and skills. You can find my main portfolio page
+                at the button below, or click any of the images on the right for a particular project.
               </p>
               
               <p class="section-text">
