--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
           <div class="btn-group">
             
             <form action="#contact">
-              <button class="btn btn-secondary" type="submit" style="left:75%">Work with me.</button>
+              <button class="btn btn-secondary" type="submit">Work with me.</button>
             </form>
 
             <form action="https://raw.githubusercontent.com/danieljamesdavis/danieljamesdavis.github.io/master/Daniel_Davis_Resume.pdf" 
                   target="_blank">
-              <button class="btn btn-primary" type="submit" style="left:80%">Here's my resume.</button>
+              <button class="btn btn-primary" type="submit">Here's my resume.</button>
             </form>
             
           </div>
