--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
           </p>
           
           <p class="section-text">
-            So, with some online resources, I've taught myself how to work with data using Python, SQL, and R. I'd love to use
+            So, with some online resources, I've taught myself how to work with data using dbt, Python, SQL, and R. I'd love to use
             what the skills I've learned to benefit you or your organization. How can we take your game to the next level?
           </p>
             
